--- a/trunk/V_1.0/mq-white2b/src/com/aol/mq/ptype/view/comps/ItemRoute.mxml
+++ b/trunk/V_1.0/mq-white2b/src/com/aol/mq/ptype/view/comps/ItemRoute.mxml
@@ -11,6 +11,7 @@
 			
 			[Bindable]
 			public var vo:ManeuverVO
+			public var isMinimised:Boolean = false;
 
 			protected function creationCompleteHandler(event:FlexEvent):void
 			{
@@ -33,10 +34,10 @@
 	</fx:Declarations>
 	<s:Border id="elementHolder" width="100%" x="0" y="0" height="{this.narrative.y+this.narrative.height+5}" borderAlpha="0" click="elementHolder_clickHandler(event)">
 		
-		<mx:Text fontSize="11" id="narrative" fontFamily="Verdana" htmlText="{'  '+vo.count+'. '+vo.narrative}" x="28" width="77%" y="12" selectable="false"/>
+		<mx:Text fontSize="11" id="narrative" fontFamily="Verdana" htmlText="{'  '+(!vo.isDestOrg ? vo.count+'.' : '')+'  '+(this.isMinimised ? vo.cityState : vo.narrative)}" x="28" width="77%" y="12" selectable="false"/>
 		<mx:Image useHandCursor="true" buttonMode="true" toolTip="Click to Navigate" source="{vo.iconUrl}" x="7" y="8"/>
-		<mx:Text id="distanceTxt" color="#ADAEAD" fontSize="9" x="{narrative.width+2}" fontFamily="Verdana" htmlText="{vo.distance.substring(0,4)+'mi'}"  y="12" selectable="false"/>
-		<mx:HRule x="10" id="rule" height="1" width="90%" y="0"/>
+		<mx:Text id="distanceTxt" color="#ADAEAD" fontSize="8" x="{narrative.x+ narrative.width+5}" fontFamily="Verdana" htmlText="{vo.distance != '' ? vo.distance.substring(0,4)+'mi' : ''}"  y="12" selectable="false"/>
+		<mx:HRule x="10" id="rule" height="1" width="95%" y="0" visible="{!this.isMinimised}"/>
 		
 	</s:Border>	
 </s:Group>
